Track 1 files into repository.
- modified footer/footer.html

Auto commit by GitBook Editor

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,8 +1,104 @@
+<!doctype html>
 <html>
-  <head>
-    <title>Caltech Library Footer</title>
-  </head>
-  <body>
-    copy right aa
-  </body>
+<head>
+<meta charset="UTF-8">
+<title>Untitled Document</title>
+<style>
+	.empty {
+		height: 150px;
+	}
+	.footContaner {
+		position: relative;
+		min-t
+		width: 100%;
+		bottom: 0px;
+		flex-flow:row;
+		height: 80px;
+	}
+	.qrcode {
+		float: left;
+		margin-left: 10px;
+		margin-top: 10px;
+		width:60px;
+		height: 60px;
+		background-color:aqua;
+	}
+	.qrcode img {
+		width: 100%;
+		height: 100%;
+	}
+	.subtextContaner{
+		position: relative;
+		margin-left: 120px;
+		margin-top: 10px;
+		height: 60px;
+	}
+	.title {
+		position:inherit;
+		margin-top: 10px;
+		width: 100%;
+		border-bottom:1px solid #a7a9aa;
+		font-size: 14px;
+		color: #a7a9aa;
+	}
+	.des {
+		margin-top: 3px;
+		color: #a7a9aa;
+		font-size: 13px;
+	}
+	.copyright{
+		position:absolute;
+		text-align: right;
+		right: 20px;
+		bottom: 0px;
+		margin-bottom: 5px;
+		color: #a7a9aa;
+		font-size: 12px;
+	}
+	.packback{
+	position:absolute;
+	right: 20px;
+	bottom: -20px;
+		
+	text-align: right;
+	margin-bottom: 5px;
+		
+	}
+	.packback a {
+		color: #a7a9aa;
+		font-size: 10px;
+	}
+</style>
+</head>
+
+
+<body>
+<div class="empty"></div>
+<div class="footContaner">
+
+	<div class="qrcode">
+	<img src="./footer/hi.png">
+	</div>
+  <div class="subtextContaner">
+		<div class="title">
+		Simpossible©
+		</div>
+		
+		<div class="des">
+		The best time to plant a tree was 10 years ago. The second best time is now.
+		</div>
+		
+	<div class="copyright">
+		Copyright © 2017  simpossible, All Rights Reserved
+		</div>
+		
+	  <div class="packback">
+		<a href="http://www.miibeian.gov.cn/state/outPortal/loginPortal.action" target="_blank">渝ICP备15010739号</a>
+	  </div>
+	</div>
+
+
+</div>
+
+</body>
 </html>
