Track 1 files into repository.
- modified footer/footer.html

Auto commit by GitBook Editor

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -93,7 +93,7 @@
 		</div>
 		
 	  <div class="packback">
-		<a href="http://www.miibeian.gov.cn/state/outPortal/loginPortal.action" target="_blank">渝ICP备15010739号</a>
+		<a href="http://www.miibeian.gov.cn" target="_blank">渝ICP备15010739号</a>
 	  </div>
 	</div>
 
